<?xml version="1.0" encoding="UTF-8"?>
<resources>

    <string name="app_name">WhatsApp Quiet Hours</string>
    <string name="action_settings">Settings</string>
    <string name="pref_hide_launcher">Hide launcher icon</string>
    <string name="pref_hide_launcher_sum">Enable this to hide the app icon from your launcher.</string>
    <string name="pref_custom_quiet_hour">Use custom quiet hours</string>
    <string name="pref_custom_quiet_hour_sum">Use this to set a custom quiet hours for Whatsapp or if your ROM doesn\'t have quiet hours</string>
    <string name="pref_mute_notifications">Mute notifications</string>
    <string name="pref_disable_vibrations">Disable vibrations</string>
    <string name="pref_disable_notification_light">Disable notification light</string>
    <string name="start_time_title">Start</string>
    <string name="end_time_title">End</string>
    <string name="quiet_hours">Quiet Hours</string>
    
    <string name="mute_pref_hour">Hour</string>
    <string name="mute_pref_hours">Hours</string>
    <string name="mute_pref_ok">OK</string>
    <string name="mute_pref_cancel">Cancel</string>    
    <string name="mute_title">Mute for…</string> 
    
 	<string name="mute_option_title">Mute all</string>
    <string name="mute_option_title_c">Cancel mute</string>
    <string name="quitehourse_option_title">Quiet hours</string>
	
	<string name="whitelist">Whitelist</string>
	<string name="whitelist_empty">Error loading contacts list.\nPlease enable whitelist and/or refresh your contacts in Whatsapp app.</string>
	<string name="pref_enable_whitelist">Enable Whitelist</string>
	<string name="pref_enable_whitelist_sum">This will make a copy of your whatsapp\'s contact list into your sdcard</string>
	<string name="pref_delete_whitelist_data">Delete all Whitelist data</string>
	<string name="pref_delete_whitelist_data_sum">This include the copy of your contact list in your sdcard</string>
	<string name="pref_delete_whitelist_data_toast">Whitelist data deleted</string>
	<string name="pref_delete_whitelist_data_toast_error">Error deleting Whitelist data</string>
	<string name="pref_respect_whitelist">Respect Whitelist</string>
	
	<string name="pref_whitelist_method">Whitelist Method</string>
	<string name="pref_whitelist_method_sum">Method to be used to implement whitelist</string>
	<string name="pref_whitelist_method_stream">Play notification in music\'s stream</string>
	<string name="pref_whitelist_method_zen">Use Alarm\'s exception from Android\'s zen mode/interruption system</string>

</resources>
